# metrics-evaluation

./: Grades.ipynb  README.md  all-singles-prelabeled.json  all-together.ipynb  all-together.tex  bootstrap.py  codebleu.py  codex.ipynb  compare.py  conala-all-grades-cb.json  conala-all-grades.json  conala-all-grades1.json  conala-human-grades.json  conala-integrated.txt  conala-metrics.json  dataset2.py  django.test_data.decode_results.txt  grades.txt  hs-all-grades-cb.json  hs-all-grades.json  hs-all-grades1.json  hs-checker.py  hs-human-grades.json  hs-humans.csv  hs-integrated-old.txt  hs-integrated.txt  hs-pairs-cb.json  hs-pairs.json  hs-pairs1.json  hs-rate-notk.py  hs-rate.py  hs-scores-cb.json  hs-scores.json  hs-scores1.json  hyps.pkl  integrating-grades.ipynb  intent.vocab  model-pairs-cbs.json  model-pairs.json  model-scores-cbs.json  (+15 more)
.ipynb_checkpoints/: Grades-checkpoint.ipynb
codebleu/: codebleu.py  codebleu_metric.py  test_codebleu.py
ruby/: bleu_score.py  nx_graphs.py  similarity.py  test.py  test_ruby.py  util.py
sacrebleu_code/: setup.py
to-grade/: all-pairs.json  all-singles-done.json  all-singles-prelabeled.json  all-singles.egor.json  all-singles.json  all-singles.tmp.json  baseline-rate.json  baseline.best-tranx-rerank.json  baseline.best-tranx.json  baseline.json  baseline.tranx-annot.json  best-tranx-rate.json  best-tranx-rerank-rate.json  best-tranx-rerank.json  best-tranx.best-tranx-rerank.json  best-tranx.json  hs.json  simple-test.json  tranx-annot-rate.json  tranx-annot.best-tranx-rerank.json  tranx-annot.best-tranx.json  (+1 more)
(+31 files in other folders)
